# Vehicle-MEC-Server

./: README.md  docker-compose.yml
MPC-Kafka/: Dockerfile
MPC-Kafka/Ipopt-3.12.7/: Makefile  config.status  libtool
MPC-Kafka/Ipopt-3.12.7/Ipopt/: Makefile  config.status  ipopt-uninstalled.pc  ipoptamplinterface-uninstalled.pc
MPC-Kafka/Ipopt-3.12.7/Ipopt/contrib/sIPOPT/src/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/doxydoc/: doxygen.conf
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Algorithm/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Algorithm/Inexact/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Algorithm/LinearSolvers/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Apps/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Apps/AmplSolver/: Makefile  ipopt  libipoptamplinterface.la
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Apps/CUTErInterface/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Common/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/Interfaces/: Makefile  libipopt.la
MPC-Kafka/Ipopt-3.12.7/Ipopt/src/LinAlg/: Makefile
MPC-Kafka/Ipopt-3.12.7/Ipopt/test/: Makefile  hs071_c  hs071_cpp  hs071_f
MPC-Kafka/Ipopt-3.12.7/Ipopt/test/.libs/: hs071_c  hs071_cpp  hs071_f  lt-hs071_c  lt-hs071_cpp  lt-hs071_f
MPC-Kafka/Ipopt-3.12.7/doxydoc/: doxygen.conf
MPC-Kafka/Model-Predictive-Control/: CMakeLists.txt
MPC-Kafka/Model-Predictive-Control/libs/: install-ubuntu.sh
MPC-Kafka/Model-Predictive-Control/src/: main.cpp
TCP-Kafka/: Dockerfile  tcp.py
a-star/: Dockerfile  examples.py  requirements.txt
user-side/: main.cpp
user-side/a-star/: cv-gen.py  examples.py  mec-astar.py
(+11 files in other folders)
